Bug 460058 - Cannot Link to Image (grayed out) reference file when inserting it via drag-and-drop
Summary: Cannot Link to Image (grayed out) reference file when inserting it via drag-a...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 5.1.1
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Tiar
URL:
Keywords: triaged
Depends on:
Blocks:
 
Reported: 2022-10-06 17:07 UTC by huulong
Modified: 2023-03-01 10:45 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot of Link to Image being grayed out (22.72 KB, image/png)
2022-10-06 17:07 UTC, huulong
Details

Note You need to log in before you can comment on or make changes to this bug.
Description huulong 2022-10-06 17:07:40 UTC
Created attachment 152621 [details]
Screenshot of Link to Image being grayed out

SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***

When importing a file as reference in Krita 5 installed via AppImage or Flatpak via drag-and-drop > Insert as Reference Image, the reference tool doesn't allow the user to select Save Location > Link to Image. It works perfectly if you add the reference image via the Reference Tool Options > + button (Add Reference Image), this is odd. Besides, there is no indication of why Link to Image is not available: it is simply grayed out.

Unfortunately, I only have a Krita 4.4.3 installed via PPA, and Krita 5.1.1 installed via AppImage and again via Flatpak, so I cannot exactly tell if the issue comes from Krita 5 (for instance, a new behavior that always copies dragged files as embedded pictures) or AppImage/Flatpak (due to file system permission limitations). Krita 4 makes it work fine with both drag-and-drop and manual add, so this should be feasible in Krita 5 too.

Workaround: always add reference files via Reference Tool Options > + button (Add Reference Image)

STEPS TO REPRODUCE
1. Create new document
2. Drag and drop any picture > Insert as Reference Image,
3. In the Reference Tool Options, click on Save Location

OBSERVED RESULT

In the dropdown, Link to Image is grayed out

EXPECTED RESULT

Link to image should be selectable

SOFTWARE/OS VERSIONS
Linux: Ubuntu 20.04 LTS
(available in About System)

ADDITIONAL INFORMATION
Krita: 5.1.1
Comment 1 wolthera 2023-01-12 14:01:36 UTC
Hi, thank you for your report.

I can confirm with the Krita Version: 5.2.0-prealpha (git 5c98a72) Appimage with Qt 5.15.7.
Comment 2 huulong 2023-02-13 20:10:37 UTC
Oddly enough, I noticed that if you drag multiple files at once as References, the bug does *not* occur. So this is another workaround, although I really don't see a reason for that.
Comment 3 Tiar 2023-02-28 21:50:56 UTC
Git commit 485e586f6bdde3afff121d72f93def5327d51def by Agata Cacko.
Committed on 28/02/2023 at 21:49.
Pushed by tymond into branch 'master'.

Fix disabled Link to Image in Ref Tool after drag-and-drop

Before this commit, there was no way to link the new reference image
to the original file, because Krita were forgetting the url.
This commit fixes that.

Notes:

- you can only choose Link to Image after adding the new reference
image. If you still use the Embed in .kra option and save and reopen,
then the location will be forgotten and there won't be a way to Link it
to Image again. (possible improvement: don't forget the location).

- in theory, the image displayed in Krita might be different before
and after saving and reopening, because before it will be loading the
file from clipboard, and the code there is pretty complicated (it
doesn't always go the same way as loading from url). To prevent issues,
just keep it as "Embed as .kra".

- removed "d->embed = false" in setFilename() and added
ref->setEmbed(false) in the loading visitor instead, because then the
responsibilities of parts of the code are more clear.

M  +0    -1    libs/ui/KisReferenceImage.cpp
M  +9    -0    libs/ui/KisView.cpp
M  +1    -0    plugins/impex/libkra/kis_kra_load_visitor.cpp

https://invent.kde.org/graphics/krita/commit/485e586f6bdde3afff121d72f93def5327d51def
Comment 4 huulong 2023-03-01 10:45:03 UTC
(In reply to Tiar from comment #3)
> Git commit 485e586f6bdde3afff121d72f93def5327d51def by Agata Cacko.
> Committed on 28/02/2023 at 21:49.
> Pushed by tymond into branch 'master'.
> 
> Fix disabled Link to Image in Ref Tool after drag-and-drop
> 

Great, I can also see now why multiple drag did work, this was done in a different block of code (see "// multiple URLs detected OR about to open a document") which was already setting the file URL. Will try it on next release!