libs/ui/KisView.cpp
@@ -620,6 +620,15 @@ void KisView::dropEvent(QDropEvent *event)
                                                        this);
 
                 if (reference) {
+                    if (data->hasUrls()) {
+                        const auto &urls = data->urls();
+                        const auto url = std::find_if(urls.constBegin(), urls.constEnd(), [&](const QUrl &url) {
+                            return url.isLocalFile();
+                        });
+                        if (url != urls.constEnd()) {
+                            reference->setFilename((*url).toLocalFile());
+                        }
+                    }
                     const auto pos = this->canvasBase()
                                          ->coordinatesConverter()
                                          ->widgetToImage(event->pos());
