plugins/impex/libkra/kis_kra_load_visitor.cpp
@@ -159,6 +159,7 @@ bool KisKraLoadVisitor::visit(KisExternalLayer * layer)
                         break;
                     } else {
                         reference->setFilename(url);
+                        reference->setEmbed(false);
                     }
                 }
             }
